# laba6

./: CMakeLists.txt  application.cpp  application.h  array.cpp  array.h  common.cpp  common.h  communicator.cpp  communicator.h  complex.cpp  complex.h  interface.cpp  interface.h  main.cpp  polynom.cpp  polynom.h
